--- a/docs/parallel-sorting/merge-sort.mdx
+++ b/docs/parallel-sorting/merge-sort.mdx
@@ -50,7 +50,7 @@ $f(n) < g(n)$ means of lower order in a polynomial sense. That is, there exists 
 
 :::
 
-### Implementation
+## Implementation
 
 ```cpp
 #include <vector>
