--- a/docs/sycl/basic-kernel.mdx
+++ b/docs/sycl/basic-kernel.mdx
@@ -14,7 +14,11 @@ The basic kernel, which we are introducing here, is a type that is simple and mo
 
 However, there are also ND kernel which allows more control for you, and this is more similar to the kernel you'll use in CUDA or OpenCL. This is more traditional and if you were migrating a kernel from CUDA or OpenCL, you should use the ND kernel.
 
-Again, this series choose SYCL for its simplicity, so we only introduce the basic kernel. Unless you need extreme performance, or you're optimizing the hot spot, you should use the basic kernel for more productivity.
+Again, this series choose SYCL for its simplicity, so we only introduce the basic kernel here. 
+
+Unless you need extreme performance, or you're optimizing the hot spot, you should use the basic kernel for more productivity.
+
+We will introduce ND kernel in the late chapters.
 
 :::
 
